--- a/index.html
+++ b/index.html
@@ -4,14 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Digital Profit Advisors | IA Aplicada a tu Negocio</title>
-    <meta name="description" content="Transforma tu negocio con chatbots, inteligencia artificial, automatización y certificación 4.0. Aumenta tus ganancias, optimiza operaciones y escala tu atención al cliente. Agenda tu diagnóstico gratuito hoy.">
-    <meta name="keywords" content="chatbots, inteligencia artificial, IA aplicada, automatización de procesos, mejora de procesos, eficiencia operativa, sitios web con IA, certificación 4.0, digital transformation, transformación digital, Botmaker, GPT, Red Hat, CERTIMIND, WhatsApp Business, chatbot con IA, chatbot para ventas, chatbot para atención al cliente, automatización de tareas, procesos digitales, consultoría digital, Costa Rica, México, Miami">
+
+    <!-- SEO Optimizado -->
+    <meta name="description" content="Digital Profit Advisors impulsa la transformación digital con chatbots de IA, automatización y certificación 4.0. Aumenta ventas, reduce costos y escala tu atención al cliente en Costa Rica, México, Centroamérica y Miami.">
+    <meta name="keywords" content="chatbots con IA, inteligencia artificial aplicada, automatización de procesos, mejora de procesos, eficiencia operativa, certificación 4.0, transformación digital, Botmaker, GPT, WhatsApp Business, chatbot para ventas, atención 24/7, automatización con IA, estrategia digital, consultoría digital, Costa Rica, México, Centroamérica, Miami, AI-driven growth">
     <meta name="author" content="Digital Profit Advisors">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://digitalprofitllc-alt.github.io/digitalprofit/">
+    <link rel="alternate" hreflang="es" href="https://digitalprofitllc-alt.github.io/digitalprofit/index.html" />
+    <link rel="alternate" hreflang="en" href="https://digitalprofitllc-alt.github.io/digitalprofit/index-en.html" />
+    <link rel="alternate" hreflang="pt" href="https://digitalprofitllc-alt.github.io/digitalprofit/index-pt.html" />
+
+    <!-- Open Graph (para redes sociales) -->
+    <meta property="og:title" content="Digital Profit Advisors | IA Aplicada a tu Negocio">
+    <meta property="og:description" content="Transforma tu negocio con chatbots, automatización y certificación 4.0. Aumenta tus ganancias y optimiza operaciones.">
+    <meta property="og:image" content="https://digitalprofitllc-alt.github.io/digitalprofit/assets/banner.jpg">
+    <meta property="og:url" content="https://digitalprofitllc-alt.github.io/digitalprofit/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Digital Profit Advisors | IA Aplicada a tu Negocio">
+    <meta name="twitter:description" content="Chatbots, automatización y certificación 4.0 para aumentar tus ganancias y escalar tu atención al cliente.">
+    <meta name="twitter:image" content="https://digitalprofitllc-alt.github.io/digitalprofit/assets/banner.jpg">
+
+    <!-- Favicon -->
     <link rel="icon" href="assets/logo.png">
-    <link rel="stylesheet" href="style.css" />
+
+    <!-- Fonts & CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/887e5c8c7d.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -25,12 +49,12 @@
         </video>
         <div class="hero-content-centered">
             <h1>Transforma tu negocio con Inteligencia Artificial aplicada.</h1>
-            <p>Chatbots, automatización y certificación 4.0 para aumentar tus ganancias, optimizar operaciones y escalar tu atención al cliente.</p>
+            <p class="hero-subtitle">Chatbots que venden, automatización que reduce costos y certificación 4.0 para escalar tu operación.</p>
             <a href="#contacto" class="btn-primary">Agenda tu diagnóstico gratuito</a>
         </div>
         <div class="whatsapp-float">
             <a href="https://wa.me/50672727250" target="_blank" title="Chat con WhatsApp">
-                <img src="assets/tecnologias/whatsapp.png" alt="WhatsApp" class="whatsapp-logo">
+                <img src="assets/tecnologias/whatsapp-logo.png" alt="WhatsApp" class="whatsapp-logo">
             </a>
         </div>
     </header>
@@ -87,7 +111,7 @@
     <section id="nosotros" class="section">
         <div class="container">
             <h2>Quiénes Somos</h2>
-            <p><strong>Digital Profit Advisors</strong> es una consultora estratégica en transformación digital con presencia en <strong>Costa Rica, Centroamérica, México y Miami</strong>.</p>
+            <p><strong>Digital Profit Advisors</strong> es una consultora estratégica en transformación digital con presencia en <strong>Costa Rica, México, Centroamérica y Miami</strong>.</p>
             <p>Nos especializamos en aplicar <strong>Inteligencia Artificial</strong> a problemas reales de negocio: aumentar ventas, reducir costos y mejorar la experiencia del cliente.</p>
             <p>Trabajamos con empresas que no solo quieren tecnología, sino <strong>resultados medibles</strong>.</p>
         </div>
@@ -198,11 +222,21 @@
         </div>
     </section>
 
+    <!-- Sección: Véalo en acción (CTA potente) -->
+    <section id="demo-cta" class="section" style="background: #111; text-align: center; padding: 80px 20px;">
+        <div class="container">
+            <h2>Véalo en acción:</h2>
+            <p style="font-size: 1.4rem; margin: 20px 0;">Experimente el futuro de la transformación digital con IA aplicada ahora.</p>
+            <p style="font-size: 1.2rem; color: #ddd; max-width: 800px; margin: 0 auto 30px;">Obtenga una demostración personalizada de cómo le ayudaremos a prevenir pérdidas, aumentar ventas, reducir costos operativos y alinear su estrategia digital con sus objetivos empresariales.</p>
+            <a href="https://wa.me/50672727250" class="btn-primary btn-large" target="_blank">Reserve su demostración en vivo</a>
+        </div>
+    </section>
+
     <!-- Sección: Tecnologías -->
     <section id="tecnologias" class="section">
         <div class="container">
-            <h2>Tecnologías que Dominamos</h2>
-            <p>Trabajamos con las plataformas líderes en automatización y experiencia del cliente:</p>
+            <h2>Plataformas que dominamos</h2>
+            <p>Trabajamos con las tecnologías líderes en automatización, IA y experiencia del cliente:</p>
             <div class="logos-tech">
                 <img src="assets/tecnologias/botmaker.png" alt="Botmaker">
                 <img src="assets/tecnologias/certimind.png" alt="CERTIMIND">
@@ -210,15 +244,9 @@
                 <img src="assets/tecnologias/gpt.png" alt="GPT">
                 <img src="assets/tecnologias/redhat.png" alt="Red Hat">
             </div>
-        </div>
-    </section>
-
-    <!-- Botón de demostración -->
-    <section id="demo" class="section" style="background: #000; text-align: center; padding: 60px 20px;">
-        <div class="container">
-            <h2 style="color: #E50000; font-size: 1.8rem;">¿Estás listo para agendar una demostración?</h2>
-            <p style="color: #ddd; margin-bottom: 30px;">Descubre cómo podemos transformar tu negocio con IA aplicada.</p>
-            <a href="https://wa.me/50672727250" class="btn-primary" target="_blank">Agenda tu demo gratis</a>
+            <p style="margin-top: 30px; color: #ccc; font-size: 1.1rem;">
+                Integración con IA generativa, automatización de procesos y certificación 4.0.
+            </p>
         </div>
     </section>
 
@@ -231,7 +259,7 @@
             <p><strong>Correo:</strong> <a href="mailto:digital.profit.llc@gmail.com">digital.profit.llc@gmail.com</a></p>
             <a href="https://wa.me/50672727250" class="btn-primary" target="_blank">Escríbenos por WhatsApp</a>
             <p style="margin-top: 30px; font-size: 0.9rem; color: #aaa;">
-                Atendemos en Costa Rica, Centroamérica, México y Miami.
+                <strong>Digital Profit Advisors:</strong> Tu aliado estratégico en transformación digital con IA, presente en Costa Rica, México, Centroamérica y Miami.
             </p>
         </div>
     </section>
@@ -239,31 +267,11 @@
     <!-- Footer -->
     <footer style="background: #111; color: #777; text-align: center; padding: 20px;">
         <p>&copy; 2025 Digital Profit Advisors. Todos los derechos reservados.</p>
+        <a href="privacy.html" style="color: #ccc; text-decoration: underline; font-size: 0.9rem;">Política de Privacidad</a>
     </footer>
 
-    <!-- Script para el menú hamburguesa -->
-    <script>
-        const menuToggle = document.querySelector('.menu-toggle');
-        const mobileMenu = document.querySelector('.mobile-menu');
-
-        menuToggle.addEventListener('click', () => {
-            mobileMenu.classList.toggle('active');
-        });
-
-        document.querySelectorAll('.mobile-menu-list a').forEach(link => {
-            link.addEventListener('click', () => {
-                mobileMenu.classList.remove('active');
-            });
-        });
-
-        window.addEventListener('click', (e) => {
-            if (!mobileMenu.contains(e.target) && !menuToggle.contains(e.target)) {
-                mobileMenu.classList.remove('active');
-            }
-        });
-    </script>
+    <!-- Script -->
+    <script src="script.js"></script>
 
 </body>
 </html>
-
-
