--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="whatsapp-float">
             <a href="https://wa.me/50672727250" target="_blank" title="Chat con WhatsApp">
-                <img src="assets/tecnologias/whatsapp-logo.png" alt="WhatsApp" class="whatsapp-logo">
+                <img src="assets/tecnologias/whatsapp.png" alt="WhatsApp" class="whatsapp-logo">
             </a>
         </div>
     </header>
@@ -259,8 +259,7 @@
             <p><strong>Correo:</strong> <a href="mailto:digital.profit.llc@gmail.com">digital.profit.llc@gmail.com</a></p>
             <a href="https://wa.me/50672727250" class="btn-primary" target="_blank">Escríbenos por WhatsApp</a>
             <p style="margin-top: 30px; font-size: 0.9rem; color: #aaa;">
-                <strong>Digital Profit Advisors:</strong> Tu aliado estratégico en transformación digital con IA, presente en Costa Rica, México, Centroamérica y Miami.
-            </p>
+                <strong>Digital Profit Advisors:</strong> Tu aliado estratégico en transformación digital con IA.
         </div>
     </section>
 
@@ -275,3 +274,4 @@
 
 </body>
 </html>
+
