--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="whatsapp-float">
             <a href="https://wa.me/50672727250" target="_blank" title="Chat con WhatsApp">
-                <img src="assets/tecnologias/whatsapp.png" alt="WhatsApp" class="whatsapp-logo">
+                <img src="assets/tecnologias/whatsapp.png" alt="WhatsApp" class="whatsapp">
             </a>
         </div>
     </header>
@@ -125,7 +125,7 @@
                 <div class="service-card">
                     <div class="icon"><i class="fas fa-robot"></i></div>
                     <h3>Customer Intelligence Automation</h3>
-                    <p>Chatbots con IA (Botmaker + GPT) que venden, califican leads y atienden 24/7 por WhatsApp, Instagram y web.</p>
+                    <p>Chatbots con IA (Botmaker + GPT) que venden, califican leads y atienden 24/7 por WhatsApp, Instagram, Facebook y Sitio Web.</p>
                     <p><strong>+67% en ventas</strong> por optimización de leads</p>
                 </div>
                 <div class="service-card">
@@ -142,13 +142,13 @@
                 </div>
                 <div class="service-card">
                     <div class="icon"><i class="fas fa-industry"></i></div>
-                    <h3>Digital Transformation & 4.0 Certification</h3>
-                    <p>Diagnóstico, estrategia y certificación con estándar <strong>CERTIMIND.org</strong> para validar tu madurez digital.</p>
+                    <h3>Digital Transformation & AI</h3>
+                    <p>Diagnóstico, estrategia y evaluaciones para validar tu madurez digital.</p>
                 </div>
                 <div class="service-card">
                     <div class="icon"><i class="fas fa-chalkboard-teacher"></i></div>
-                    <h3>AI & Digital Skills Training</h3>
-                    <p>Capacitamos a tu equipo para que aprovechen al máximo las nuevas tecnologías.</p>
+                    <h3>Digital Skills Training</h3>
+                    <p>Capacitamos a tu equipo para que aprovechen al máximo las nuevas tecnologías y además, obtengan certificaciones con estándares internacionales <strong>.</p>
                 </div>
             </div>
         </div>
@@ -274,4 +274,5 @@
 
 </body>
 </html>
+
 
