--- a/index.html
+++ b/index.html
@@ -223,14 +223,16 @@
     </section>
 
     <!-- Sección: Véalo en acción (CTA potente) -->
-    <section id="demo-cta" class="section" style="background: #111; text-align: center; padding: 80px 20px;">
-        <div class="container">
-            <h2>Véalo en acción:</h2>
-            <p style="font-size: 1.4rem; margin: 20px 0;">Experimente el futuro de la transformación digital con IA aplicada ahora.</p>
-            <p style="font-size: 1.2rem; color: #ddd; max-width: 800px; margin: 0 auto 30px;">Obtenga una demostración personalizada de cómo le ayudaremos a prevenir pérdidas, aumentar ventas, reducir costos operativos y alinear su estrategia digital con sus objetivos empresariales.</p>
-            <a href="https://wa.me/50672727250" class="btn-primary btn-large" target="_blank">Reserve su demostración en vivo</a>
-        </div>
-    </section>
+<section id="demo-cta" class="section" style="background: #111; padding: 80px 20px;">
+    <div class="container" style="text-align: center;">
+        <h2 style="color: #E50000; font-size: 2.5rem; margin-bottom: 20px;">Véalo en acción:</h2>
+        <p style="font-size: 1.4rem; margin: 20px 0; color: #ddd;">Experimente el futuro de la transformación digital con IA aplicada ahora.</p>
+        <p style="font-size: 1.2rem; color: #ddd; max-width: 800px; margin: 0 auto 30px;">
+            Obtenga una demostración personalizada de cómo le ayudaremos a prevenir pérdidas, aumentar ventas, reducir costos operativos y alinear su estrategia digital con sus objetivos empresariales.
+        </p>
+        <a href="https://wa.me/50672727250" class="btn-primary btn-large" target="_blank">Reserve su demostración en vivo</a>
+    </div>
+</section>
 
     <!-- Sección: Tecnologías -->
     <section id="tecnologias" class="section">
@@ -275,3 +277,4 @@
 
 </body>
 </html>
+
