--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
                 </div>
                 <div class="service-card">
                     <div class="icon"><i class="fas fa-industry"></i></div>
-                    <h3>Digital Transformation & 4.0 Certification</h3>
-                    <p>Diagnóstico, estrategia y certificación con estándar <strong>CERTIMIND.org</strong> para validar tu madurez digital.</p>
+                    <h3>Digital Transformation & AI</h3>
+                    <p>Diagnóstico, estrategia y análisis para validar tu madurez digital.</p>
                 </div>
                 <div class="service-card">
                     <div class="icon"><i class="fas fa-chalkboard-teacher"></i></div>
-                    <h3>AI & Digital Skills Training</h3>
-                    <p>Capacitamos a tu equipo para que aprovechen al máximo las nuevas tecnologías.</p>
+                    <h3>Certification & Digital Skills Training</h3>
+                    <p>Capacitamos a tu equipo para que aprovechen al máximo las nuevas tecnologías, así como las certificaciones de la industria 4.0.</p>
                 </div>
             </div>
         </div>
@@ -276,5 +276,6 @@
 
 </body>
 </html>
+
 
 
