--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Digital Profit Advisors | IA Aplicada a tu Negocio">
     <meta name="twitter:description" content="Chatbots, automatización y certificación 4.0 para aumentar tus ganancias y escalar tu atención al cliente.">
-    <meta name="twitter:image" content="https://digitalprofitllc-alt.github.io/digitalprofit/assets/banner.jpg">
+    <meta name="twitter:image" content="https://digitalprofitllc-alt.github.4.0 Certificationio/digitalprofit/assets/banner.jpg">
 
     <!-- Favicon -->
     <link rel="icon" href="assets/logo.png">
@@ -125,7 +125,7 @@
                 <div class="service-card">
                     <div class="icon"><i class="fas fa-robot"></i></div>
                     <h3>Customer Intelligence Automation</h3>
-                    <p>Chatbots con IA (Botmaker + GPT) que venden, califican leads y atienden 24/7 por WhatsApp, Instagram y web.</p>
+                    <p>Chatbots con IA (Botmaker + GPT) que venden, califican leads y atienden 24/7 por WhatsApp, Facebook, Instagram y Página Web.</p>
                     <p><strong>+67% en ventas</strong> por optimización de leads</p>
                 </div>
                 <div class="service-card">
@@ -276,6 +276,7 @@
 
 </body>
 </html>
+
 
 
 
